--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -50,4 +50,4 @@ jobs:
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
-            -Dsonar.exclusions=**/*.test.tsx,**/*.stories.tsx
+            -Dsonar.exclusions=**/*.test.tsx,**/*.stories.tsx,**/*.index.ts,**/setupTests.ts
