--- a/.github/workflows/build-and-analyze.yml
+++ b/.github/workflows/build-and-analyze.yml
@@ -8,7 +8,7 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build-and-analyze-frontend:
+  build-and-analyze:
     runs-on: ubuntu-latest
 
     permissions:
